--- a/bunnysstyle.css
+++ b/bunnysstyle.css
@@ -54,9 +54,8 @@ nav li{
 }
 
 /* Instabilder-Style */
-.pictures{
-  display: flex;
+#picinsta{
+  width: 100%;
   justify-content: center;
-
-  
+  align-items: center;
 }
